@@ -5,6 +5,6 @@
 {if $property.prop_l10n_mode}
 			'l10n_mode' => '{$property.prop_l10n_mode}',
 {/if}
-			'label' => {include file="_basics/ll_label.tpl"},
+			'label' => '{include file="_basics/ll_label.tpl"}',
 			'config' => Array (
 
