@@ -1,1 +1,1 @@
-'LLL:EXT:{$configExtension}/llxml/locallang_{$table.alias}_db.xml:{$table.alias}__{$property.alias}'
+LLL:EXT:{$configExtension}/llxml/locallang_{$table.alias}_db.xml:{$table.alias}__{$property.alias}
