@@ -11,18 +11,6 @@
 				</TCEforms>
 				<type>array</type>
 				<el>
-					<subprops type="array">
-						<TCEforms>
-							<label>LLL:EXT:kb_kickstarter/fieldTypes/tabcontainer/locallang.xml:field.subprops</label>
-							<config>
-								<type>select</type>
-								<size>10</size>
-								<maxitems>20</size>
-								<minitems>1</size>
-								<foreign_table>tx_kbkickstarter_fields</foreign_table>
-							</config>
-						</TCEforms>
-					</subprops>
 				</el>
 			</ROOT>
 		</sDEF>
