@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes" ?>
 <T3locallang>
 	<meta type="array">
-		<description>Property labels for kb_kickstart property "tabcontainer"</description>
+		<description>Property labels for kb_kickstart property "tab"</description>
 		<type>database</type>
 		<csh_table></csh_table>
-		<fileId>EXT:kb_kickstarter/fieldTypes/tabcontainer/locallang.xml</fileId>
+		<fileId>EXT:kb_kickstarter/fieldTypes/tab/locallang.xml</fileId>
 		<labelContext type="array">
 			<label index="property_name"></label>
 			<label index="field.prop_min"></label>
 			<label index="field.prop_max"></label>
 			<label index="field.prop_default"></label>
 		</labelContext>
-		<ext_filename_template>EXT:csh_###LANGKEY###/kb_kickstarter/fieldTypes/tabcontainer/###LANGKEY###.locallang.xml</ext_filename_template>
+		<ext_filename_template>EXT:csh_###LANGKEY###/kb_kickstarter/fieldTypes/tab/###LANGKEY###.locallang.xml</ext_filename_template>
 		<keep_original_text type="integer">1</keep_original_text>
 	</meta>
 	<data type="array">
 		<languageKey index="default" type="array">
-			<label index="property_name">Tab-Container</label>
+			<label index="property_name">Tab</label>
 		</languageKey>
 	</data>
 </T3locallang>
